objects/TW1_Dependente__c.object
<CustomObject>
    <fields>
        <fullName>M_s__c</fullName>
        <description>Retorna um valor inteiro para o mês do campo Nascimento e em seguida converte este valor para uma String</description>
        <formula>CASE(MONTH(TW1_Nascimento__c), 
1, &quot;Janeiro&quot;, 
2, &quot;Fevereiro&quot;, 
3, &quot;Março&quot;, 
4, &quot;Abril&quot;, 
5, &quot;Maio&quot;, 
6, &quot;Junho&quot;, 
7, &quot;Julho&quot;, 
8, &quot;Agosto&quot;, 
9, &quot;Setembro&quot;, 
10, &quot;Outubro&quot;, 
11, &quot;Novembro&quot;, 
12, &quot;Dezembro&quot;, 
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mês</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_s_int__c</fullName>
        <description>Retorna um valor inteiro para o mês do campo Nascimento</description>
        <formula>MONTH(TW1_Nascimento__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mês(int)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Peso_KG__c</fullName>
        <inlineHelpText>Insira o peso da criança em kilos</inlineHelpText>
        <label>Peso (KG)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Conta_Associada__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Conta Associada</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dependentes</relationshipLabel>
        <relationshipName>Dependentes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Nascimento__c</fullName>
        <label>Nascimento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Parentesco__c</fullName>
        <label>Parentesco</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Filho(a)</fullName>
                </value>
                <value>
                    <fullName>Pai</fullName>
                </value>
                <value>
                    <fullName>Mãe</fullName>
                </value>
                <value>
                    <fullName>Neto(a)</fullName>
                </value>
                <value>
                    <fullName>Tio(a)</fullName>
                </value>
                <value>
                    <fullName>Avó</fullName>
                </value>
                <value>
                    <fullName>Avô</fullName>
                </value>
                <value>
                    <fullName>Sobrinho(a)</fullName>
                </value>
                <value>
                    <fullName>Cônjuge</fullName>
                </value>
                <value>
                    <fullName>Madrasta</fullName>
                </value>
                <value>
                    <fullName>Padrasto</fullName>
                </value>
                <value>
                    <fullName>Enteado(a)</fullName>
                </value>
                <value>
                    <fullName>Outros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Sexo__c</fullName>
        <label>Sexo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Dependente</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TW1_Nascimento__c</columns>
        <columns>TW1_Parentesco__c</columns>
        <columns>TW1_Sexo__c</columns>
        <columns>TW1_Conta_Associada__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Nome do Dependente</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dependentes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>